--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <div class="container mx-auto mt-8">
     <div class="carousel" id="carousel">
         <div class="slide">
-            <img src="https://images.unsplash.com/photo-1572635196237-14b3f281503f?q=50&w=900&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" style="height: 600px;" alt="Product 1">
+            <img src="./Item1.jpeg.jpg" style="height: 600px;" alt="Product 1">
             <div class="product-info">
                 <h3>Product 1</h3>
             </div>
