--- a/index.html
+++ b/index.html
@@ -48,25 +48,25 @@
 <div class="container mx-auto mt-8">
     <div class="carousel" id="carousel">
         <div class="slide">
-            <img src="./Item1.jpeg.jpg" style="height: 600px;" alt="Product 1">
+            <img src="./img/Item1.jpeg.jpg" style="height: 600px;" alt="Product 1">
             <div class="product-info">
                 <h3>Product 1</h3>
             </div>
         </div>
         <div class="slide">
-            <img src="https://images.unsplash.com/photo-1505156868547-9b49f4df4e04?q=80&w=1916&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" style="height: 600px;" alt="Product 2">
+            <img src="./img/Item2.jpeg.jpg" style="height: 600px;" alt="Product 2">
             <div class="product-info">
                 <h3>Product 2</h3>
             </div>
         </div>
         <div class="slide">
-            <img src="https://images.unsplash.com/photo-1581955957646-b5a446b6100a?q=80&w=1780&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" style="height: 600px;" alt="Product 2">
+            <img src="./img/Item3.jpeg.jpg" style="height: 600px;" alt="Product 2">
             <div class="product-info">
                 <h3>Product 3</h3>
             </div>
         </div>
         <div class="slide">
-            <img src="https://images.unsplash.com/photo-1582845512747-e42001c95638?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" style="height: 600px;" alt="Product 2">
+            <img src="./img/Item-4.jpeg.jpg" style="height: 600px;" alt="Product 2">
             <div class="product-info">
                 <h3>Product 4</h3>
             </div>
