--- a/index.html
+++ b/index.html
@@ -48,25 +48,25 @@
 <div class="container mx-auto mt-8">
     <div class="carousel" id="carousel">
         <div class="slide">
-            <img src="./img/Item1.jpg" style="height: 600px;" alt="Product 1">
+            <img src="./img/item1.jpg" style="height: 600px;" alt="Product 1">
             <div class="product-info">
                 <h3>Product 1</h3>
             </div>
         </div>
         <div class="slide">
-            <img src="./img/Item2.jpg" style="height: 600px;" alt="Product 2">
+            <img src="./img/item2.jpg" style="height: 600px;" alt="Product 2">
             <div class="product-info">
                 <h3>Product 2</h3>
             </div>
         </div>
         <div class="slide">
-            <img src="./img/Item3.jpg" style="height: 600px;" alt="Product 2">
+            <img src="./img/item3.jpg" style="height: 600px;" alt="Product 2">
             <div class="product-info">
                 <h3>Product 3</h3>
             </div>
         </div>
         <div class="slide">
-            <img src="./img/Item-4.jpg" style="height: 600px;" alt="Product 2">
+            <img src="./img/item-4.jpg" style="height: 600px;" alt="Product 2">
             <div class="product-info">
                 <h3>Product 4</h3>
             </div>
